# actions-argo-demo

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile
.argo/: argo_create_app.sh
.argo/hestekur/overlays/dev/: kustomization.yaml  values-dev.yaml
.argo/hestekur/overlays/prd/: kustomization.yaml  values-prd.yaml
.argo/hestekur/overlays/tst/: kustomization.yaml  values-tst.yaml
.github/workflows/: 1_ci_dev.yml  1_ci_dev.yml.bak  2_ci_tst.yml.bak  3_ci_prd.yml  3_ci_prd.yml.bak  ci.yml
src/: main.rs
