[package]
name = "hello-github-actions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "hello-github-actions"
path = "src/main.rs"

[dependencies]
actix-web = "4"

[target.x86_64-unknown-linux-musl]
linker = "ld"
rustflags = ["-Ctarget-feature=-crt-static", "-Clink-self-contained=on", "-L/usr/lib/x86_64-linux-musl", "-Clink-args=--dynamic-linker /lib/ld-musl-x86_64.so.1"]

#[target.x86_64-unknown-linux-musl]
#linker = "x86_64-linux-musl-gcc"